tests/fixtures/invalid/str_bitor_bytes.py
# Cannot bitwise OR Str and Bytes
x: str = "hello" | b"hello"
